# pico-examples

blink/: blink.c
i2c/: CMakeLists.txt
i2c/bmp280_i2c/: CMakeLists.txt  bmp280_i2c.c
i2c/bus_scan/: CMakeLists.txt  bus_scan.c
i2c/bus_scan_multiplex/: CMakeLists.txt  bus_scan_multiplex.c
pio/hello_pio/: hello.c
